@@ -1,3 +1,7 @@
+2009-01-27 Jerome Pasquier  <rainbru@free.fr>
+	* acinclude.m4 (RB_CHECK_LIBCURL) : Added support for
+	cross-compilation to win32.
+	
 2009-01-16 Jerome Pasquier  <rainbru@free.fr>
 	* common/curlfiletoxml.cpp (CurlFileToXml) : Added a constructor
 	initializer for the doc pointer to avoid an instance creation with 
